[tool.poetry]
name = "langgraph-playbook"
version = "0.1.0"
description = "play book for langgraph"
authors = ["sjson <sjson.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
ipython = "^8.29.0"
pydantic = "^2.9.2"
langgraph = "^0.2.50"
python-dotenv = "^1.0.1"
langsmith = "^0.1.143"
langchain-community = "^0.3.7"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.pydocstyle]
convention = "google"
